force-app/main/default/objects/plaunch__PipelaunchSignal__c/plaunch__PipelaunchSignal__c.object-meta.xml
<CustomObject>
    <description>Stores all PipeLaunch Signals received</description>
    <label>PipeLaunch Match</label>
    <nameField>
        <label>PipeLaunch Signal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PipeLaunch Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>