force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Account__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PipelaunchSignals</relationshipName>
    <type>Lookup</type>
</CustomField>