force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ConfidenceScore__c</fullName>
    <description>100% means a very high confidence score = relevant Signal</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>