force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Contact__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Lookup</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PipelaunchSignals</relationshipName>
    <type>Lookup</type>
</CustomField>