force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Data__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Data__c</fullName>
    <description>JSON Data</description>
    <inlineHelpText>JSON Data. Do not edit!</inlineHelpText>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>