force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Date__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Date__c</fullName>
    <description>This field indicates the specific date of the signal (e.g. when an individual started their new job). Please note that this field does not apply to other signal types, such as name mismatches, where there is no specific date associated with the change.</description>
    <inlineHelpText>This field indicates the specific date of the signal (e.g. when an individual started their new job). Please note that this field does not apply to other signal types, such as name mismatches, where there is no specific date associated with the change.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>