force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Lead__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Lookup</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>PipelaunchSignals</relationshipName>
    <type>Lookup</type>
</CustomField>