force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>plaunch__ObjectName__c</fullName>
    <description>Get the Object Name by looking to the not null lookup values</description>
    <formula>IF(NOT(ISBLANK(plaunch__Contact__c)), &apos;Contact&apos;,
IF(NOT(ISBLANK(plaunch__Lead__c)), &apos;Lead&apos;, &apos;Account&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>