force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__PipelaunchValue__c.field-meta.xml
<CustomField>
    <fullName>plaunch__PipelaunchValue__c</fullName>
    <description>New value</description>
    <label>PipeLaunch Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>