force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__SalesforceValue__c.field-meta.xml
<CustomField>
    <fullName>plaunch__SalesforceValue__c</fullName>
    <description>Old value</description>
    <label>Salesforce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>