force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Status__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
                <isActive>false</isActive>
                <label>Processed</label>
            </value>
            <value>
                <fullName>Unprocessed</fullName>
                <isActive>false</isActive>
                <label>Unprocessed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>