force-app/main/default/objects/plaunch__PipelaunchSignal__c/fields/plaunch__Type__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Type__c</fullName>
    <description>Type of the signal detected</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Change</fullName>
                <default>true</default>
                <label>Company Change</label>
            </value>
            <value>
                <fullName>Find Company Linkedin</fullName>
                <label>Find Company LinkedIn</label>
            </value>
            <value>
                <fullName>Find Person Linkedin</fullName>
                <label>Find Person LinkedIn</label>
            </value>
            <value>
                <fullName>Job Title Change</fullName>
            </value>
            <value>
                <fullName>Name Mismatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>