force-app/main/default/objects/plaunch__PipelaunchSignal__c/validationRules/plaunch__LookupRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>plaunch__LookupRequired</fullName>
    <active>true</active>
    <description>A lookup is required</description>
    <errorConditionFormula>AND(ISBLANK(plaunch__Lead__c), ISBLANK(plaunch__Contact__c), ISBLANK(plaunch__Account__c))</errorConditionFormula>
    <errorMessage>A lookup is required</errorMessage>
</ValidationRule>