force-app/main/default/objects/plaunch__PipelaunchSignal__c/validationRules/plaunch__SingleLookup.validationRule-meta.xml
<ValidationRule>
    <fullName>plaunch__SingleLookup</fullName>
    <active>true</active>
    <description>Only a single lookup is allowed</description>
    <errorConditionFormula>OR(
  AND(
    NOT(ISBLANK(plaunch__Contact__c)), NOT(ISBLANK(plaunch__Lead__c)), NOT(ISBLANK(plaunch__Account__c))
  ),
  AND(
    NOT(ISBLANK(plaunch__Contact__c)), NOT(ISBLANK(plaunch__Lead__c))
  ), 
  AND(
    NOT(ISBLANK(plaunch__Contact__c)), NOT(ISBLANK(plaunch__Account__c))
  ),
  AND(
    NOT(ISBLANK(plaunch__Lead__c)), NOT(ISBLANK(plaunch__Account__c))
  )
)</errorConditionFormula>
    <errorMessage>Only a single lookup is allowed</errorMessage>
</ValidationRule>