force-app/main/default/objects/plaunch__PipelaunchSignal__c/listViews/plaunch__All.listView-meta.xml
<ListView>
    <fullName>plaunch__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>plaunch__Status__c</columns>
    <columns>plaunch__Type__c</columns>
    <columns>plaunch__SalesforceValue__c</columns>
    <columns>plaunch__PipelaunchValue__c</columns>
    <columns>plaunch__Account__c</columns>
    <columns>plaunch__Contact__c</columns>
    <columns>plaunch__Lead__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>