force-app/main/default/objects/plaunch__PipelaunchSignal__c/listViews/plaunch__Contacts.listView-meta.xml
<ListView>
    <fullName>plaunch__Contacts</fullName>
    <columns>CREATED_DATE</columns>
    <columns>plaunch__Type__c</columns>
    <columns>plaunch__Status__c</columns>
    <columns>plaunch__Contact__c</columns>
    <columns>plaunch__SalesforceValue__c</columns>
    <columns>plaunch__PipelaunchValue__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>plaunch__Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contacts</label>
</ListView>